[project]
name = "fastapi-p31"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "black>=25.9.0",
    "faker>=37.11.0",
    "fastapi>=0.119.0",
    "flake8>=7.3.0",
    "greenlet>=3.2.4",
    "isort>=7.0.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.3",
    "pytest>=8.4.2",
    "python-jose>=3.5.0",
    "python-slugify>=8.0.4",
    "ruff>=0.14.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]

[tool.alembic]
script_location = "%(here)s/migrations"
version_locations = ["migrations/versions"]
prepend_sys_path = "."

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
skip = ["__init__.py"]
extend_skip = [".venv", "venv", "migrations"]

[tool.black]
line-length = 79
exclude = '''
(
    /(\.venv|venv|migrations|tests)/
)
'''

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

addopts = "-v"
